--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,55 @@
+attrs==20.2.0
+Automat==20.2.0
+beautifulsoup4==4.9.3
+Brotli==1.0.9
+certifi==2020.6.20
+cffi==1.14.3
+chardet==3.0.4
+click==7.1.2
+constantly==15.1.0
+cryptography==3.2
+cssselect==1.1.0
 dash==1.6.1
+dash-core-components==1.5.1
+dash-cytoscape==0.2.0
+dash-html-components==1.0.2
+dash-renderer==1.2.1
+dash-table==4.5.1
+decorator==4.4.2
+Flask==1.1.2
+Flask-Compress==1.7.0
+future==0.18.2
+hyperlink==20.0.1
+idna==2.10
+incremental==17.5.0
+itemadapter==0.1.1
+itemloaders==1.0.3
+itsdangerous==1.1.0
+Jinja2==2.11.2
+jmespath==0.10.0
+jsonlines==1.2.0
+lxml==4.6.1
+MarkupSafe==1.1.1
 networkx==2.4
+parsel==1.6.0
 plotly==4.3.0
+Protego==0.1.16
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+PyDispatcher==2.0.5
+PyHamcrest==2.0.2
+pyOpenSSL==19.1.0
+queuelib==1.5.0
+requests==2.24.0
+retrying==1.3.3
+Scrapy==2.4.0
 SecretColors==1.1.0
-
-# These are only used by Scrapy. We should consider moving this elsewhere so the Dockerfile doesn't contain this
-#jsonlines==1.2.0
-#Scrapy~=2.4.0
-#requests~=2.24.0
-#beautifulsoup4~=4.9.3
+service-identity==18.1.0
+six==1.15.0
+soupsieve==2.0.1
+Twisted==20.3.0
+urllib3==1.25.11
+w3lib==1.22.0
+Werkzeug==1.0.1
+zope.interface==5.1.2
